--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Foxico</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700"
+			rel="stylesheet"
+		/>
+		<title>Travelopia</title>
 	</head>
 	<body>
 		<div id="root"></div>
